--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,26 +7,7 @@ homeassistant:
   time_zone: Europe/Berlin
   # Include customizations
   customize: !include customize.yaml
-
-  customize_glob:
-    "device_tracker.esp_*":
-      icon: mdi:bug
-    "device_tracker.rpi_*":
-      icon: mdi:raspberrypi
-    "light.Hue*":
-      hidden: true
-      homebridge_hidden: true
-    "sensor.*_moisture":
-      icon: mdi:cup-water
-    "light.trad_*":
-      homebridge_hidden: true
-    "device_tracker.*":
-      homebridge_hidden: true
-    "sensor.dark_sky*":
-      homebridge_hidden: true
-    "sensor.feinstaub*":
-      homebridge_hidden: true
-
+  customize_glob: !include customize_glob.yaml
 
 zone 2:
   name: Work
