--- a/configuration.yaml
+++ b/configuration.yaml
@@ -97,7 +97,36 @@ ios:
           - identifier: 'dismiss'
             title: 'Okay'
             behavior: 'default'
+telegram_bot:
+  - platform: broadcast
+    api_key: !secret telegram_api_key
+    allowed_chat_ids:
+      - !secret telegram_group_id
+      - !secret telegram_jan_id
 
+notify:
+  - name: homegroup
+    platform: telegram
+    chat_id: !secret telegram_group_id
+  - name: jan
+    platform: telegram
+    chat_id: !secret telegram_jan_id
+  - name: all_ios_devices
+    platform: group
+    services:
+      - service: ios_jans_iphone
+      # - service: ios_iphone_two
+
+apcupsd:
+binary_sensor:
+  - platform: apcupsd
+
+  - platform: digital_ocean
+    droplets:
+      - box.janw.xyz
+
+digital_ocean:
+  access_token: !secret digital_ocean_api_key
 
 # Include other config files
 light: !include light.yaml
@@ -105,9 +134,8 @@ group: !include groups.yaml
 scene: !include scene.yaml
 switch: !include switch.yaml
 sensor: !include sensor.yaml
+input_boolean: !include input_boolean.yaml
+input_number: !include input_number.yaml
 script: !include_dir_named script
 automation: !include automations.yaml
-
-# Discover some devices automatically (normally disabled)
-# discovery:
-
+history_graph: !include history_graphs.yaml
